--- a/Integrity Countermeasure/mainwindow.ui
+++ b/Integrity Countermeasure/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>602</width>
-    <height>318</height>
+    <width>913</width>
+    <height>652</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -38,6 +38,11 @@
         <item>
          <property name="text">
           <string>DES with Text</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Image Encryption</string>
          </property>
         </item>
        </widget>
@@ -95,7 +100,7 @@
         <item>
          <widget class="QLabel" name="label">
           <property name="text">
-           <string>  Plain Text</string>
+           <string>  Plain-Text</string>
           </property>
          </widget>
         </item>
@@ -109,7 +114,7 @@
         <item>
          <widget class="QLabel" name="label_2">
           <property name="text">
-           <string>  Encrypted Text</string>
+           <string>Encrypted-Text</string>
           </property>
          </widget>
         </item>
@@ -122,59 +127,61 @@
     </item>
     <item>
      <widget class="QStackedWidget" name="stackedWidget">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="layoutDirection">
+       <enum>Qt::LeftToRight</enum>
+      </property>
       <property name="frameShadow">
        <enum>QFrame::Plain</enum>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="CaesarCipher">
        <layout class="QGridLayout" name="gridLayout">
-        <item row="0" column="2">
-         <widget class="QLineEdit" name="lineEdit_CC_key"/>
-        </item>
-        <item row="0" column="3">
-         <widget class="QLabel" name="label_4">
-          <property name="text">
-           <string>Range ( 0 : 26 )</string>
-          </property>
-         </widget>
-        </item>
         <item row="0" column="0">
          <widget class="QLabel" name="label_3">
           <property name="text">
-           <string>Key : </string>
+           <string>Key :  Range ( 0 : 26 )</string>
           </property>
          </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QLineEdit" name="lineEdit_CC_key"/>
         </item>
        </layout>
       </widget>
       <widget class="QWidget" name="page_2">
-       <widget class="QLineEdit" name="lineEdit_PF_Secret">
+       <widget class="QLineEdit" name="lineEdit_DES_key_2">
         <property name="geometry">
          <rect>
-          <x>60</x>
+          <x>90</x>
           <y>10</y>
-          <width>511</width>
+          <width>551</width>
           <height>20</height>
          </rect>
         </property>
        </widget>
-       <widget class="QLabel" name="label_5">
+       <widget class="QLabel" name="label_7">
         <property name="geometry">
          <rect>
           <x>10</x>
           <y>10</y>
           <width>71</width>
-          <height>20</height>
+          <height>21</height>
          </rect>
         </property>
         <property name="text">
-         <string>Secret : </string>
+         <string>Secret Key :</string>
         </property>
        </widget>
       </widget>
-      <widget class="QWidget" name="page">
+      <widget class="QWidget" name="DES">
        <widget class="QLabel" name="label_6">
         <property name="geometry">
          <rect>
@@ -185,155 +192,116 @@
          </rect>
         </property>
         <property name="text">
-         <string>Secret : </string>
+         <string>Secret Key : </string>
         </property>
        </widget>
        <widget class="QLineEdit" name="lineEdit_DES_key">
         <property name="geometry">
          <rect>
-          <x>60</x>
+          <x>90</x>
           <y>10</y>
-          <width>511</width>
+          <width>591</width>
           <height>20</height>
          </rect>
         </property>
        </widget>
       </widget>
-      <widget class="QWidget" name="page_3">
-       <widget class="QLineEdit" name="RSA_lineEdit_p">
+      <widget class="QWidget" name="image">
+       <widget class="QPushButton" name="imageButton">
         <property name="geometry">
          <rect>
-          <x>30</x>
-          <y>10</y>
-          <width>41</width>
-          <height>20</height>
+          <x>0</x>
+          <y>0</y>
+          <width>93</width>
+          <height>28</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Upload Image</string>
+        </property>
+       </widget>
+       <widget class="QWidget" name="layoutWidget">
+        <property name="geometry">
+         <rect>
+          <x>0</x>
+          <y>28</y>
+          <width>891</width>
+          <height>271</height>
+         </rect>
+        </property>
+        <layout class="QHBoxLayout" name="horizontalLayout_3">
+         <item>
+          <layout class="QVBoxLayout" name="verticalLayout_4">
+           <item>
+            <widget class="QLabel" name="plainImage">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">background-color: rgb(255, 255, 255);
+border-top-color: rgb(2, 2, 2);
+border-color: rgb(2, 2, 2);</string>
+             </property>
+             <property name="text">
+              <string/>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignCenter</set>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <layout class="QVBoxLayout" name="verticalLayout_5">
+           <item>
+            <widget class="QLabel" name="encryptImage">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">background-color: rgb(255, 255, 255);
+border-color: rgb(0, 0, 0);</string>
+             </property>
+             <property name="text">
+              <string/>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignCenter</set>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+        </layout>
+       </widget>
+       <widget class="QLineEdit" name="lineEditImage">
+        <property name="geometry">
+         <rect>
+          <x>230</x>
+          <y>0</y>
+          <width>591</width>
+          <height>22</height>
          </rect>
         </property>
        </widget>
-       <widget class="QLabel" name="label_7">
+       <widget class="QLabel" name="label_5">
         <property name="geometry">
          <rect>
-          <x>10</x>
-          <y>10</y>
-          <width>21</width>
+          <x>150</x>
+          <y>0</y>
+          <width>71</width>
           <height>16</height>
          </rect>
         </property>
         <property name="text">
-         <string>P: </string>
-        </property>
-       </widget>
-       <widget class="QLineEdit" name="RSA_lineEdit_q">
-        <property name="geometry">
-         <rect>
-          <x>120</x>
-          <y>10</y>
-          <width>41</width>
-          <height>20</height>
-         </rect>
-        </property>
-       </widget>
-       <widget class="QLabel" name="label_8">
-        <property name="geometry">
-         <rect>
-          <x>100</x>
-          <y>10</y>
-          <width>21</width>
-          <height>16</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>Q: </string>
-        </property>
-       </widget>
-       <widget class="QLineEdit" name="RSA_lineEdit_prkey">
-        <property name="enabled">
-         <bool>false</bool>
-        </property>
-        <property name="geometry">
-         <rect>
-          <x>250</x>
-          <y>10</y>
-          <width>121</width>
-          <height>20</height>
-         </rect>
-        </property>
-       </widget>
-       <widget class="QLabel" name="label_9">
-        <property name="geometry">
-         <rect>
-          <x>180</x>
-          <y>10</y>
-          <width>61</width>
-          <height>16</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>Private Key: </string>
-        </property>
-       </widget>
-       <widget class="QLabel" name="label_12">
-        <property name="geometry">
-         <rect>
-          <x>390</x>
-          <y>10</y>
-          <width>61</width>
-          <height>16</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>Public Key: </string>
-        </property>
-       </widget>
-       <widget class="QLineEdit" name="RSA_lineEdit_pukey">
-        <property name="enabled">
-         <bool>false</bool>
-        </property>
-        <property name="geometry">
-         <rect>
-          <x>450</x>
-          <y>10</y>
-          <width>121</width>
-          <height>20</height>
-         </rect>
-        </property>
-       </widget>
-      </widget>
-      <widget class="QWidget" name="page_4">
-       <widget class="QLabel" name="label_10">
-        <property name="geometry">
-         <rect>
-          <x>500</x>
-          <y>10</y>
-          <width>76</width>
-          <height>20</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>Numeric Value</string>
-        </property>
-       </widget>
-       <widget class="QLabel" name="label_11">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>10</y>
-          <width>28</width>
-          <height>20</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>Key : </string>
-        </property>
-       </widget>
-       <widget class="QLineEdit" name="lineEdit_rc4_key">
-        <property name="geometry">
-         <rect>
-          <x>44</x>
-          <y>10</y>
-          <width>450</width>
-          <height>20</height>
-         </rect>
+         <string>Image Key :</string>
         </property>
        </widget>
       </widget>
@@ -346,7 +314,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>602</width>
+     <width>913</width>
      <height>26</height>
     </rect>
    </property>
