Added Sensor Graph, right now they all plot the ECG Signal, I need to convert the text files for the EEG and SPO2 data. Also, the directory in main is my personal one, so just like for the photos you have to add your own for now.

--- a/CyberBox/networkmain.ui
+++ b/CyberBox/networkmain.ui
@@ -79,7 +79,10 @@
      </rect>
     </property>
     <property name="minimum">
-     <number>1</number>
+     <number>2</number>
+    </property>
+    <property name="maximum">
+     <number>24</number>
     </property>
    </widget>
    <widget class="QLabel" name="label">
@@ -157,7 +160,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:792; font-style:italic;&quot;&gt;Graph Usage&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:792; font-style:italic;&quot;&gt;Usage Graph&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
     <property name="textFormat">
      <enum>Qt::AutoText</enum>
