--- a/CyberBox/attackermain.ui
+++ b/CyberBox/attackermain.ui
@@ -108,6 +108,19 @@
      <string>Automatic Add</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="addDevButton_3">
+    <property name="geometry">
+     <rect>
+      <x>350</x>
+      <y>110</y>
+      <width>121</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Fork Bomb Network</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
