--- a/CyberBox/spo2main.ui
+++ b/CyberBox/spo2main.ui
@@ -40,6 +40,21 @@
      <enum>Qt::AutoText</enum>
     </property>
    </widget>
+   <widget class="QPlainTextEdit" name="plainTextEdit">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>340</y>
+      <width>581</width>
+      <height>111</height>
+     </rect>
+    </property>
+    <property name="plainText">
+     <string>SpO2, also known as oxygen saturation, is a measure of the amount of oxygen-carrying hemoglobin in the blood relative to the amount of hemoglobin not carrying oxygen.
+
+https://www.homecaremag.com/understanding-spo2-and-normal-oxygen-levels#:~:text=SpO2%2C%20also%20known%20as%20oxygen,of%20hemoglobin%20not%20carrying%20oxygen.</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -47,7 +62,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>21</height>
+     <height>26</height>
     </rect>
    </property>
   </widget>
