--- a/CyberBox/cyberbox.ui
+++ b/CyberBox/cyberbox.ui
@@ -18,22 +18,9 @@
     <property name="geometry">
      <rect>
       <x>100</x>
-      <y>30</y>
+      <y>20</y>
       <width>201</width>
       <height>131</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QLabel" name="labelSwitch">
-    <property name="geometry">
-     <rect>
-      <x>280</x>
-      <y>160</y>
-      <width>251</width>
-      <height>111</height>
      </rect>
     </property>
     <property name="text">
@@ -44,7 +31,7 @@
     <property name="geometry">
      <rect>
       <x>100</x>
-      <y>340</y>
+      <y>330</y>
       <width>121</width>
       <height>91</height>
      </rect>
@@ -56,8 +43,8 @@
    <widget class="QLabel" name="labelSN2">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>340</y>
+      <x>330</x>
+      <y>330</y>
       <width>121</width>
       <height>91</height>
      </rect>
@@ -70,7 +57,7 @@
     <property name="geometry">
      <rect>
       <x>580</x>
-      <y>340</y>
+      <y>330</y>
       <width>121</width>
       <height>91</height>
      </rect>
@@ -83,7 +70,7 @@
     <property name="geometry">
      <rect>
       <x>100</x>
-      <y>450</y>
+      <y>470</y>
       <width>121</width>
       <height>91</height>
      </rect>
@@ -95,8 +82,8 @@
    <widget class="QLabel" name="labelBIT2">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>450</y>
+      <x>330</x>
+      <y>470</y>
       <width>121</width>
       <height>91</height>
      </rect>
@@ -109,7 +96,7 @@
     <property name="geometry">
      <rect>
       <x>580</x>
-      <y>450</y>
+      <y>470</y>
       <width>121</width>
       <height>91</height>
      </rect>
@@ -122,7 +109,7 @@
     <property name="geometry">
      <rect>
       <x>470</x>
-      <y>30</y>
+      <y>20</y>
       <width>201</width>
       <height>131</height>
      </rect>
@@ -154,7 +141,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>NETWORK SWITCH</string>
+     <string>NETWORK</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButtonMain">
@@ -186,7 +173,7 @@
    <widget class="QPushButton" name="pushButtonEEG">
     <property name="geometry">
      <rect>
-      <x>310</x>
+      <x>330</x>
       <y>430</y>
       <width>113</width>
       <height>32</height>
@@ -209,6 +196,19 @@
      <string>SpO2</string>
     </property>
    </widget>
+   <widget class="QLabel" name="labelSwitch">
+    <property name="geometry">
+     <rect>
+      <x>340</x>
+      <y>170</y>
+      <width>121</width>
+      <height>91</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -216,7 +216,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>22</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
