--- a/CyberBox/eegmain.ui
+++ b/CyberBox/eegmain.ui
@@ -40,6 +40,19 @@
      <enum>Qt::AutoText</enum>
     </property>
    </widget>
+   <widget class="QPlainTextEdit" name="plainTextEdit">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>350</y>
+      <width>581</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="plainText">
+     <string>The electroencephalogram (EEG) is a recording of the electrical activity of the brain from the scalp. The recorded waveforms reflect the cortical electrical activity.</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
