--- a/CyberBox/spo2main.ui
+++ b/CyberBox/spo2main.ui
@@ -46,13 +46,13 @@
       <x>110</x>
       <y>340</y>
       <width>581</width>
-      <height>111</height>
+      <height>71</height>
      </rect>
     </property>
     <property name="plainText">
      <string>SpO2, also known as oxygen saturation, is a measure of the amount of oxygen-carrying hemoglobin in the blood relative to the amount of hemoglobin not carrying oxygen.
 
-https://www.homecaremag.com/understanding-spo2-and-normal-oxygen-levels#:~:text=SpO2%2C%20also%20known%20as%20oxygen,of%20hemoglobin%20not%20carrying%20oxygen.</string>
+</string>
     </property>
    </widget>
   </widget>
@@ -62,7 +62,7 @@ https://www.homecaremag.com/understanding-spo2-and-normal-oxygen-levels#:~:text=
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>26</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
